# OFAC

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: piper-voices-dir.txt  settings.local.json
OFAC-SLS-API-reference/: ofac sanctions list service - api documentation.docx
docs/: 20251206_OFAC_Data_Schemas_Analysis_and_Recommendations.md  PRD_SESSION_RESUME.md  architecture.md  bmm-workflow-status.yaml  deployment-readiness-checklist.md  epics.md  implementation-readiness-report-2025-12-09.md  prd.md  project-summary.md  project_context.md  test-design-system.md  ux-design-specification.md
docs/SLS-data-schemas/: advanced_xml.xsd  xml.xsd
docs/analysis/: product-brief-OFAC-20251206.md
docs/bmad-book/: 00-BOOK-OUTLINE.md  01-RESEARCH-FINDINGS.md  README.md
docs/bmad-master/: 20251206_BMad_Master_Project_Assessment.md  BMAD_Agent_Decision_Rubrics.md  BMAD_Learning_Journal.md  BMAD_Method_Principles.md  BMAD_Project_Retrospective.md  BMAD_Story_Structure_Guide.md  DuckTales_Agent_Customizations.md  OFAC_BMAD_Roadmap.md
docs/conceptual-design/: 20251205_OFAC_Sanctions_Screening_Tools_Plan.md  20251206_OFAC_List_Update_Policies_and_Strategy.md
docs/sprint-artifacts/: 1-1-project-initialization.md  1-2-configuration-system.md  1-3-core-data-models.md  1-4-custom-exception-hierarchy.md  1-5-ofac-data-schemas.md  1-6-ofac-data-loader.md  1-7-ofac-data-downloader.md  1-8-basic-matching-engine.md  2-1-fastapi-application-setup.md  2-10-summary-dashboard.md  2-2-single-entity-screening-endpoint.md  2-3-batch-screening-endpoint.md  2-4-file-parsing-column-detection.md  2-5-streamlit-app-shell.md  2-6-file-upload-component.md  2-7-column-mapping-component.md  2-8-screening-execution-with-progress.md  2-9-results-display-component.md  3-1-ok-review-nok-classification-logic.md  3-2-sanctioned-countries-registry.md  3-3-country-aware-score-boosting.md  3-4-humanitarian-keyword-detection.md  3-5-general-license-flagging.md  3-6-country-alignment-display.md  4-1-report-generator-service.md  4-2-summary-sheet.md  4-3-detailed-results-sheet.md  4-4-exceptions-sheet.md  4-5-color-coding-formatting.md  4-6-audit-trail-fields.md  4-7-one-click-download.md  5-1-freshness-status-calculation.md  5-2-ofac-status-api-endpoint.md  5-3-freshness-display-in-ui.md  5-4-manual-update-trigger.md  5-5-update-trigger-api.md  6-1-match-details-expansion.md  6-2-risk-level-classification.md  6-3-analyst-notes-field.md  6-4-single-entity-re-screening.md  (+10 more)
sample-data/: Round 2 2025-Project to Fund Response ACN INTL - 20250812 - RAW DATA.csv  Round 2 2025-Project to Fund Response ACN INTL - 20250812.xlsx
src/ofac/: __init__.py  __main__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_health.py  (+2 more)
(+58 files in other folders)
